--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-image: url("image/bg-home-main.jpg")  ;
+  background-image: url("../image/bg-home-main.jpg")  ;
   background-size: cover;
   background-repeat: no-repeat;
 
@@ -42,7 +42,7 @@ body {
 
   background: transparent;
 
-  background-image: url('image/lupa.svg');
+  background-image: url('../image/lupa.svg');
   background-repeat: no-repeat;
   background-size: 20px;
   background-position: right;
