--- a/styles/index_styles.css
+++ b/styles/index_styles.css
@@ -1,13 +1,3 @@
-* {
-  font-family: 'Open Sans', sans-serif;
-
-  margin: 0;
-  padding: 0;
-
-  box-sizing: border-box;
-
-}
-
 body {
   background-image: url("../image/bg-home-main.jpg")  ;
   background-size: cover;
@@ -30,26 +20,46 @@ body {
   align-items: center;
 }
 
+.nav-bar form label {
+
+  padding-top: 5px;
+  padding-right: 5px; 
+  display: flex;
+  align-items: baseline;
+  justify-content: space-between;
+
+  border-radius: 8px;
+
+  width: 230px;
+  height: 50px;
+
+  border: 1px solid #ffffffa6;
+}
+
 .nav-bar .input {
 
   color: #fff;
   font-size: 12px;
 
-  width: 230px;
-  height: 50px;
+  border: none;
 
   margin: 10px;
 
   background: transparent;
+}
 
+.nav-bar .input-button {
+  width: 20px;
+  height: 20px;
+  background-color: transparent;
+  border: none;
   background-image: url('../image/lupa.svg');
   background-repeat: no-repeat;
-  background-size: 20px;
-  background-position: right;
-  border-radius: 8px;
+}
 
-  border: 1px solid #ffffffa6;
-
+.nav-bar .input-button:hover {
+  background-image:  url('../image/lupa-hover.svg');
+  background-repeat: no-repeat;
 }
 
 .link {
