--- a/styles/courses_styles.css
+++ b/styles/courses_styles.css
@@ -1,21 +1,24 @@
 html {
   background-color:whitesmoke;
+  scroll-behavior: smooth;
 }
 
 .background-white {
   background-color: white;
-  width: 100vw;
+  
+  width: 100%;
   height: 100px;
-  margin-left: -12%;
 
   position: absolute;
-
+  left: 0;
+  top: 0;
   z-index: -1;
 }
 
 .container {
+  max-width: 1200px;
   width: 80%;
-  margin: auto
+  margin: auto;
 }
 
 /* NAV */
@@ -27,7 +30,6 @@ html {
   display: flex;
   justify-content: space-around; 
   align-items: center; 
-
 }
 
 
@@ -110,7 +112,7 @@ form label {
 
 
 .arrow-top {
-  background-image: url('../image/arrow-white.svg');
+  background-image: url('../image/arrow-black.svg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -118,20 +120,19 @@ form label {
   height: 40px;
   width: 50px;
 
-  background-color: rgba(0, 0, 0, 0.200);
- 
-
   transform: rotate(90deg);
 
   position: fixed;
-  margin-left: 90%;
-  margin-top: 80%;
+  left: 92vw;
+  top: 90vh;
 
-  transition: background-color 0.5s;
+  opacity: 0.5;
+
+  transition: opacity 0.5s;
 }
 
 .arrow-top:hover  {
-  background-color: black;
+  opacity: 1;
 }
 
 /* h1 */
@@ -139,7 +140,7 @@ form label {
 #title {
   font-size: 50px;
 
-  padding: 15px 0 30px 0;
+  padding-top: 15px;
 }
 
 
@@ -151,6 +152,7 @@ form label {
   justify-content: space-evenly;
 
   flex-wrap: wrap;
+  padding-top: 15px;
 
 }
 
