--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,9 @@
 * {
-  font-family: 'Open Sans', sans-serif;
-
   box-sizing: border-box;
-
+  
   margin: 0;
   padding: 0;
+  
+  font-size: 18px;
+  font-family: 'Open Sans', sans-serif;
 }
