--- a/styles/search_styles.css
+++ b/styles/search_styles.css
@@ -1,42 +1,50 @@
-
-#wave {
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  
-  height: 150px;
-  width: 100%;
-
-  background-color: royalblue;
+html {
+  scroll-behavior: smooth;
 }
 
-#wave:before {
-  content: "";
-  display: block;
+
+/* = = = OCEAN = = = */
+
+#ocean{
+  z-index: -1;
+  width: 100%;
+  min-height: 200px;
   position: absolute;
-  right: -10px;
-  top: 92px;
-  
-  width: 57%;
-  height: 200px;
-  
-  border-radius: 230% 115%;
+  top: 0;
+  left: 0;
+  right: 0;
+
   background-color: whitesmoke;
 }
 
-#wave:after {
-  content: "";
-  display: block;
-  position: absolute;
-  left: -10px;
-  top: 0;
+.wave{
+  position:absolute;
+  display: inline-block;
+  height: 60%;
+  width: 5px;
 
-  width: 60%;
-  height: 200px;
-  
-  border-radius: 230% 115%;
-  background-color: royalblue;
+  background-color: #167bf7;
+  animation-name: dostuff; 
+  animation-duration: 3s; 
+  animation-iteration-count: infinite;
+  transition-timing-function: ease-in-out;
 }
+
+
+@keyframes dostuff{
+  0%{
+    height: 60%;
+  }
+  50%{ 
+    height: 50%;
+  }
+  100%{ 
+    height: 60%;
+  }
+}
+
+
+/* = = = NAV-BAR = = = */
 
 .nav-bar {
   display: flex;
@@ -78,10 +86,10 @@
 
 .nav-bar .label-search input {
   width:7rem;
-
+  
+  font-size: 0.5rem;
   background-color: transparent;
   border: none;
-  font-size: 0.5rem;
   color: black;
 }
 
@@ -89,13 +97,13 @@
   width: 1rem;
   height: 1rem;
   
+  font-size: 0.8rem;
   background-image: url('../image/lupa-preta.svg');
   background-color: transparent;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   border: none;
-  font-size: 0.8rem;
   cursor: pointer;
 
   opacity: 0.5;
@@ -107,11 +115,16 @@
 
 .nav-bar .a-showAll {
   font-size: 0.8rem;
+
+  border-bottom: 1px solid transparent;
 }
 
 .nav-bar .a-showAll:hover {
   border-bottom: 1px solid #39C5ED;
 }
+
+
+/* = = = CONTAINER = = = */
 
 .container {  
   width: 80%;
@@ -120,6 +133,10 @@
 
   background-color: whitesmoke;
 }
+
+
+/* = = = MAIN = = = */
+
 
 main {
   margin-top: 150px;
@@ -131,14 +148,82 @@ main h1 {
   font-size: 1.8rem;
 }
 
-main li {
+
+/* = = = UL-LIST = = = */
+
+.ul-list li {
+  list-style: none;
+}
+
+.ul-list > li {
+  border: 5px double #6D39ED;
+}
+
+.ul-list > li:not(:first-child)	{
+  margin-top: 2rem;
+} 
+
+.ul-list li a {
+  display: block;
   padding: 1.5rem;
 
-  list-style: none;
-  border: 5px double #6D39ED;
-  font-size: 1.5rem;
+  text-decoration: none;
+  color: black;
 }
 
-main li + li{
-  margin: 1rem 0;
+.ul-list > li h3 {
+  font-size: 1.2rem;
 }
+
+.ul-list p {
+  line-height: 1.2;
+
+  font-size: .8rem;
+}
+
+.ul-list > li a div {
+  display: flex;
+  align-items: center;
+  margin-bottom: .5rem;
+ }
+
+.ul-list img {
+  width: 3rem;
+  height: 3rem;
+  margin-right: .5rem;
+ }
+ 
+ .ul-list li ul {
+  margin: 0.5rem 0;
+}
+
+.ul-list li p strong {
+  font-size: .8rem;
+}
+
+
+ /* = = = FOOTER = = = */
+
+ footer {
+   width: 100%;
+   height: 250px;
+   position: absolute;
+   left: 0;
+   margin-top: 50px;
+   
+   display: flex;
+   justify-content: center;
+   align-items: center;
+
+   background-color: #167bf7;
+   color: white;
+ }
+
+ footer a {
+   text-decoration: none;
+   color: white;
+ }
+
+ footer a:hover {
+   color: black;
+ }
