--- a/styles/search_styles.css
+++ b/styles/search_styles.css
@@ -1,58 +1,27 @@
-html {
-  scroll-behavior: smooth;
-}
-
-
-/* = = = OCEAN = = = */
-
-#ocean{
-  z-index: -1;
-  min-height: 200px;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  background-color: whitesmoke;
-}
-
-.wave{
-  position:absolute;
-  display: inline-block;
-  height: 60%;
-  width: 5px;
-  
-  background: linear-gradient(#167cf7 10%, #61A5F9 50%);
-
-  animation-name: dostuff; 
-  animation-duration: 5s; 
-  animation-iteration-count: infinite;
-  transition-timing-function: ease-in-out;
-}
-
-
-@keyframes dostuff{
-  0%{
-    height: 60%;
-  }
-  50%{ 
-    height: 50%;
-  }
-  100%{ 
-    height: 60%;
-  }
-}
-
-
 /* = = = NAV-BAR = = = */
 
+
+.nav-background {
+  background-color: var(--main-color);
+  width: 100%;
+  height: 100px;
+
+  z-index: -1;
+
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+
 .nav-bar {
+
   display: flex;
   justify-content: space-between;
   align-items: center;
 
   height: 100px;
 
-  background-color: transparent;
+  background-color: var(--main-color);
 }
 
 .nav-bar > * {
@@ -60,16 +29,7 @@ html {
   text-decoration: none; 
 }
 
-.nav-bar .h1-logo {
-  font-size: 2rem;
-}
-
-.nav-bar .h1-logo:hover {
-  color: black;
-}
-
 .nav-bar .label-search {
-  
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -94,8 +54,6 @@ html {
   border: none;
   color: black;
 }
-
-
 
 .nav-bar input:focus + label {
   background-color: magenta;
