--- a/styles/formation_styles.css
+++ b/styles/formation_styles.css
@@ -106,50 +106,104 @@
 /* = = = SECTION CONTENT = = = */
 
 .section-content .content  {
-  width: 80%;
+  width: 90%;
   max-width: 1200px;
   margin: 5rem auto;
-  padding: 3rem;
   
   background-color: white;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.300);
 }
 
-.section-content .content-title {
+  /* = = CONTENT HEADER = = */
+
+.content-header {
   display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  width: 100%;
+  height: 5rem;
   margin-bottom: 3rem;
   
   color: var(--color-var);
 }
 
-.section-content .content-title img { 
-  width: 4rem;
-  height: 4rem;
+.content-header .header-title {
+  display: flex;
+  align-items: center;
+  
+  margin-left: 3rem;
+  margin-top: 2rem;
+}
+
+.content-header .header-title img {
+  width: 5rem;
+  height: 5rem;
   margin-right: 2rem;
+  padding-bottom: 1rem;
 
-  border-bottom: 3px solid var(--color-var);
+  border-bottom: 3px solid var(--color-var)
 }
 
-.section-content .content-title p {
-  display: block;
-  font-size: 1rem;
+.content-header .header-title h3 {
+  font-size: 1.2rem;
+  font-weight: 700;
+}
+.content-header .header-title p { 
+  font-weight: 600;
 }
 
-.section-content .content-title h3 {
-  font-size: 1.7rem;
+.content-header .header-formation {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+
+  width: 10rem;
+  height: 3rem;
+  
+  background-color: var(--color-var);
 }
 
-.section-content .content-grid {
+
+.content-header .header-formation p {
+  font-weight: 700;
+
+  color: white;
+}
+
+  /* = = CONTENT GRID = = */
+
+
+.content-grid {
   display: grid;
   gap: 1rem;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+  
+  padding: 3rem;
+  padding-top: 1rem;
 }
 
-.section-content .content-grid a {
-  font-size: .9rem;
-  color: grey;
+.content-grid a {
+  font-size: .8rem;
+
+  color: #4a535a;
 }
 
-.section-content .content-grid p{
+.content-grid a:hover {
+  text-decoration: underline;
+}
+
+.content-grid p{
+  font-weight: 700;
   font-size: .7rem;
+
   color: grey;
+}
+
+.content-grid p span {
+  margin-left: 5px;
+  font-weight: 800;
+
+  color: var(--color-var);
 }
