--- a/styles/formation_styles.css
+++ b/styles/formation_styles.css
@@ -207,3 +207,82 @@
 
   color: var(--color-var);
 }
+
+
+/* = = = SECTION SEARCH = = = */
+
+.section-search {
+
+  width: 90%;
+  max-width: 1200px;
+  height: 200px;
+  
+  margin: 0 auto;
+  margin-top: 3rem;
+
+  background: linear-gradient(90deg, #3e8bcd 33%, #71bde7 66% );
+}
+
+.search-label {
+  width: 100%;
+  height: 100%;
+  
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.label-text {
+  color: white;
+}
+
+.label-text p:first-child {
+  font-size: 1.2rem;
+  font-weight: 400;
+
+}
+
+.label-text p:last-child {
+  font-weight: 700;
+  font-size: 1.2rem;
+
+}
+
+.label-form input {
+  width: 30rem;
+  height: 3.5rem;
+
+  font-size: .9rem;
+  border: none;
+  border-radius: 3px 0 0 3px;
+  margin-left: 1px;
+
+  padding-left: 1.5rem;
+}
+
+.label-form input::placeholder {
+  margin-left: 2rem;
+  
+  font-size: .9rem;
+  color: #60addf;
+}
+
+.label-form button {
+  height: 3.5rem;
+  width: 7rem;
+  
+  margin-left: -2px;
+
+  border: none;
+  border-radius: 0 3px 3px 0;
+
+  font-size: .8rem;
+  font-weight: 700;
+  text-transform: uppercase;
+
+  color: #60addf;
+  background-color: white;
+}
+.label-form button:hover {
+  color: #3e8bcd;
+}
