--- a/styles/courses_styles.css
+++ b/styles/courses_styles.css
@@ -20,109 +20,31 @@ html {
   margin: auto;
 }
 
-/* NAV */
-
-.nav-bar {
-  height: 100px;
-  background-color: var(--main-color);
-
-  display: flex;
-  justify-content: space-around; 
-  align-items: center; 
-}
-
-
-.nav-bar .back {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.nav-bar a {
-  text-decoration: none;
-}
-
-.nav-bar .showAll {
-  color: white;
-  font-size: 18px;
-  border-bottom: 2px solid transparent;
-
-
-  transition: border-bottom 0.5s;
-}
-
-.nav-bar .showAll:hover {
-  border-bottom: 2px solid white;
-}
-
-
-/* INPUT */
-
-
-form label {
-
-  padding-top: 5px;
-  padding-right: 5px; 
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-
-  border-radius: 8px;
-
-  width: 230px;
-  height: 50px;
-
-  border: 1px solid rgba(0, 0, 0, 0.500);
-}
-
-.input {
-
-  color: black;
-  font-size: 12px;
-
-  border: none;
-
-  margin: 10px;
-
-  background: transparent;
-}
-
-.input-button {
-  width: 20px;
-  height: 20px;
-  background-color: transparent;
-  border: none;
-  background-image: url('../image/magnifying-black.svg');
-  background-repeat: no-repeat;
-}
-
-
-/* MAIN */
+/* = = = MAIN = = = */
 
 .top {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 
 .arrow-top {
-  background-image: url('../image/arrow-black.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-
   height: 40px;
   width: 50px;
-
-  transform: rotate(90deg);
 
   position: fixed;
   left: 92vw;
   top: 90vh;
 
-  opacity: 0.5;
+  background-image: url('../image/arrow-black.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
 
+  transform: rotate(90deg);
+
+  opacity: 0.5;
   transition: opacity 0.5s;
 }
 
@@ -185,8 +107,6 @@ form label {
 
 
 #list ul li{
-  list-style: none;
-
   font-weight: lighter;
   font-size: 20px;
 }
