--- a/styles/search_styles.css
+++ b/styles/search_styles.css
@@ -1,112 +1,15 @@
-/* = = = NAV-BAR = = = */
-
-
-.nav-background {
-  background-color: var(--main-color);
-  width: 100%;
-  height: 100px;
-
-  z-index: -1;
-
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-
-.nav-bar {
-
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  height: 100px;
-
-  background-color: var(--main-color);
-}
-
-.nav-bar > * {
-  color: white;
-  text-decoration: none; 
-}
-
-.nav-bar .label-search {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  width: 10rem;
-  height: 2.5rem;
-  padding: .5rem;
-
-  background-color: white;
-  border-radius: 0.4rem;
-}
-
-.nav-bar .label-search:focus {
-  border-color: black;
-}
-
-.nav-bar .label-search input {
-  width:7rem;
-  
-  font-size: 0.5rem;
-  background-color: transparent;
-  border: none;
-  color: black;
-}
-
-.nav-bar input:focus + label {
-  background-color: magenta;
-}
-
-.nav-bar .label-search button {
-  width: 1rem;
-  height: 1rem;
-  
-  font-size: 0.8rem;
-  background-image: url('../image/lupa-preta.svg');
-  background-color: transparent;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  border: none;
-  cursor: pointer;
-
-  opacity: 0.5;
-}
-
-.nav-bar .label-search button:hover {
-  opacity: 1;
-}
-
-.nav-bar .a-showAll {
-  font-size: 0.8rem;
-
-  border-bottom: 1px solid transparent;
-}
-
-.nav-bar .a-showAll:hover {
-  border-bottom: 1px solid whitesmoke;
-}
-
-.nav-bar form label {
-  border: 2px solid grey;
-
-}
-
-.nav-bar form label:focus-within {
-  border-color: black;
-}
-
-
 /* = = = CONTAINER = = = */
+
+body {
+
+  background-color: whitesmoke;
+}
 
 .container {  
   width: 80%;
   max-width: 1200px;
   margin: auto;
 
-  background-color: whitesmoke;
 }
 
 
@@ -122,7 +25,7 @@ main h1 {
 /* = = = UL-LIST = = = */
 
 .ul-list li {
-  list-style: none;
+
 }
 
 .ul-list > li {
