--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,15 +20,8 @@
   padding: 0;
   
   font-size: 18px;
-  font-family: 'Open Sans', sans-serif;
+  list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
+  font-family: 'Open Sans', sans-serif;
 }
-
-
-
-.h1-logo {
-  color: white;
-  font-size: 1.8rem;
-}
-
