--- a/styles/courses_styles.css
+++ b/styles/courses_styles.css
@@ -1,19 +1,3 @@
-html {
-  background-color:whitesmoke;
-}
-
-.background-white {
-  background-color: var(--main-color);
-  
-  width: 100%;
-  height: 100px;
-
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-}
-
 .container {
   max-width: 1200px;
   width: 80%;
@@ -57,7 +41,7 @@ html {
 #title {
   font-size: 50px;
 
-  padding-top: 15px;
+  padding: 50px 0;
 }
 
 
