--- a/styles/footer_styles.css
+++ b/styles/footer_styles.css
@@ -6,7 +6,7 @@
 }
 
 
-.container {
+.footer-container {
   width: 80%;
   max-width: 1200px;
   margin: 0 auto;
@@ -23,7 +23,7 @@
   font-size: 2rem;
 }
 
-.nav-list h3 {
+.footer-list h3 {
   margin-bottom: 1rem;
   
   color: white;
@@ -32,7 +32,7 @@
 }
 
 
-.nav-list a {
+.footer-list a {
   display: block;
   padding: 10px  10px 10px 0;
   
@@ -43,6 +43,6 @@
   transition: opacity .3s;
 }
 
-.nav-list a:hover{
+.footer-list a:hover{
   opacity: .5;
 }
