--- a/styles/courses_styles.css
+++ b/styles/courses_styles.css
@@ -120,33 +120,33 @@
 
 .letters {
   display: flex;
-  justify-content: space-evenly;
-  
+  justify-content: space-around;
   flex-wrap: wrap;
-  padding: 10px 0;
   
   margin: 15px 0;
 
-  background-color: white;
-  border: 3px solid black;
-
+  background-color: black;
 }
 
 .letters a {
-  color: grey;
+  padding: 10px;
+  
   font-size: 24px;
   text-decoration: none;
-  font-weight: bold;
-
-  padding: 2px 5px;
-  margin-left: 5px;
-
-  transition: color 0.5s;
+  font-weight: bold;  
+  color: grey;
+  background-color: whitesmoke;
+  
+  transition: .3s;
 }
 
 .letters a:hover {
+  padding-left: 20px;
+  padding-right: 20px;
+  
   color: var(--main-color);
-  text-shadow: 0 0 25px var(--main-color);
+  background-color: whitesmoke;
+  box-shadow: inset 5px 0 4px grey, inset -5px 0 4px grey;
 }
 
 /* UL LI */
