--- a/styles/courses_styles.css
+++ b/styles/courses_styles.css
@@ -13,29 +13,6 @@
 }
 
 
-.arrow-top {
-  height: 40px;
-  width: 50px;
-
-  position: fixed;
-  left: 92vw;
-  top: 90vh;
-
-  background-image: url('../image/arrow-black.svg');
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
-
-  transform: rotate(90deg);
-
-  opacity: 0.5;
-  transition: opacity 0.5s;
-}
-
-.arrow-top:hover  {
-  opacity: 1;
-}
-
 /* h1 */
 
 #title {
@@ -52,7 +29,7 @@
 
 .form-courses label {
   padding: 10px;
-  border: 2px solid grey;
+  border: 2px solid black;
 
   width: 30%;
 
@@ -63,12 +40,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  border-radius: 5px;
 }
 
 .form-courses label:focus-within {
-  border-color: black;
+  border: 2px solid var(--main-color);
 }
 
 
@@ -95,17 +70,18 @@
 
   border: none;
   background-color: transparent;
-  background-image: url(../image/magnifying-black.svg);
+  background-image: url(../image/magnifying-blue.svg);
   background-repeat: no-repeat;
   background-size: cover;
 
   cursor: pointer;
 
-  opacity: .5;  
+  filter: grayscale(1)  
 }
 
 .form-courses label button:hover {
-  opacity: 1;
+    filter: grayscale(0)  
+
 }
 
 
@@ -122,10 +98,15 @@
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
-  
+/*   
+  border-top: 1px solid black;
+  border-bottom: 1px solid black; */
+
   margin: 15px 0;
 
-  background-color: black;
+  background-color: white;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.500);
 }
 
 .letters a {
@@ -134,37 +115,71 @@
   font-size: 24px;
   text-decoration: none;
   font-weight: bold;  
-  color: grey;
-  background-color: whitesmoke;
+  color: black;
+  background-color: transparent;
   
   transition: .3s;
 }
 
 .letters a:hover {
-  padding-left: 20px;
-  padding-right: 20px;
-  
+  padding-left: 25px;
+  padding-right: 25px;
   color: var(--main-color);
-  background-color: whitesmoke;
-  box-shadow: inset 5px 0 4px grey, inset -5px 0 4px grey;
 }
 
 /* UL LI */
 
 #list ul {
-  font-weight: bold;
-  font-size: 42px;
+
   margin-top: 32px;
   margin-bottom: 24px;
-
+    
   padding: 10px 15px;
 
-  border: 2px solid grey;
-  border-radius: 5px;
+
+  background-color: white;
+
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.500);
+
+}
+
+#list .header-courses { 
+  width: 20%;
+  margin: 10px 0;
+  margin-left: -15px;
+  margin-top: 50px;
+  padding: 0 15px;
+
+  display: flex;
+  align-items: baseline;
+  
+  color: white;
+  font-weight: bold;
+  background-color: var(--main-color);  
+}
+
+#list .header-courses h3 { 
+  flex: 1;
+  font-size: 42px;
+}
+
+#list .header-courses p { 
+  font-size: 16px;
 }
 
 
+#list .header-courses span { 
+  width: 23px;
+  height: 24px;
+
+  margin-left: 15px;
+
+  background-image: url(../image/arrow-board.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
 #list ul li{
-  font-weight: lighter;
   font-size: 20px;
 }
