--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,7 +20,6 @@
   padding: 0;
   
   font-size: 18px;
-  list-style: none;
   text-decoration: none;
   scroll-behavior: smooth;
   font-family: 'Open Sans', sans-serif;
@@ -28,4 +27,8 @@
 
 body {
   background-color: var(--mainBackground-color);
+}
+
+ul {
+  list-style: none;
 }
