--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,6 @@
 :root {
   --mainBackground-color: whitesmoke;
+  --mainText-color: #3d4b5c;
   --main-color: #167bf6;
 
   --mobile-color: #ffba05;
