--- a/styles/formationMobile_styles.css
+++ b/styles/formationMobile_styles.css
@@ -1,4 +1,119 @@
-html {
-  color: maroon;
-    
+.container {
+  width: 90%;
+  max-width: 1200px;
+  margin: 0 auto;
 }
+
+/* = = = SECTION HEADER = = = */
+
+.section-header {
+  background-color: transparent;
+}
+
+.section-header::after {
+  content: '';
+  z-index: -1;
+  position: absolute;
+
+  width: 100%;
+  height: 230px;
+  top: 200px;
+  left: 0;
+  
+  filter: opacity(.05);
+  background-color: var(--main-color);
+}
+
+  /* = = ICON = = */
+
+  .header-icon {
+    height: 230px;
+
+    font-weight: 600;
+    color: var(--main-color);
+  }
+
+  .header-icon img {
+    width: 75px;
+    height: 75px;
+    margin-top: 50px;
+    margin-bottom: 10px;
+
+    border-radius: 10px;
+    background-color: var(--mobile-color);
+  }
+
+  .header-icon p {
+    font-size: 1.2rem;
+  }
+
+  .header-icon h2 {
+    line-height: 2rem;
+    font-size: 2.2rem;
+  }
+
+  /* = = CONTENT = = */
+  
+  .header-content {
+    margin-top: 50px;
+    margin-bottom: 20px;
+
+    color: var(--mainText-color);
+  }
+  
+  .header-content p {
+    line-height: 1.5rem;
+  }
+
+  .header-content a {
+    cursor: pointer;
+    text-decoration: underline;
+  }
+  
+  .header-content a:hover {
+    text-decoration: none;
+  }
+
+  /* = = NAV = = */
+
+  .header-nav {
+    width: 50%;
+
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    padding: 20px 0;
+  }
+  
+  .header-nav li a {
+    color: var(--main-color);
+  }
+
+  .header-nav li:first-child {
+    border-bottom: 2px solid var(--main-color);
+  }
+
+  .header-nav::before {
+    content: '';
+    position: absolute;
+
+    left: 0;
+    right: 0;
+    top: 560px;
+    
+    height: 2px;
+    background-color: var(--main-color);
+  }
+  
+  .header-nav::after {
+    content: '';
+    position: absolute;
+    
+    left: 0;
+    right: 0;
+    top: 620px;
+
+    height: 2px;
+    background-color: var(--main-color);
+  }
+  
